# be/src/routes/voucherRoute.js
@@ -3,6 +3,7 @@ import {
   validateVoucher,
   createVoucher,
   listVouchers,
+  updateVoucher,
   toggleVoucherStatus,
 } from "../controller/voucherController.js";
 import { protectedRoute } from "../middlewares/authMiddleware.js";
@@ -15,6 +16,7 @@ router.get("/validate", protectedRoute, validateVoucher);
 //admin
 router.post("/", protectedRoute, adminOnly, createVoucher);
 router.get("/", protectedRoute, adminOnly, listVouchers);
+router.put("/:id", protectedRoute, adminOnly, updateVoucher);
 router.patch(
   "/:id/toggle-status",
   protectedRoute,
